# haikov

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: a_hundred_and_seventy_chinese_poems_by_various.txt  collected_poems_by_alfred_noyes.txt  combined.txt  kalevala_in_english.txt  poems_by_emily_dickinson.txt  test.txt  trees_and_other_poems_joyce_kilmer.txt
documentation/: implementation_document.md  requirement_specification.md  test_documentation.md  user_guide.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: haiku_generator.py  index.py  input_processor.py  node.py  trie.py
src/entities/: node.py  trie.py
src/services/: haiku_generator.py  input_processor.py
src/tests/: haiku_generator_test.py  input_processor_test.py  node_test.py  test_file.txt  trie_test.py
src/ui/: ui.py
